--- a/WordAddInDemoV2/WordAddInDemoV2.csproj
+++ b/WordAddInDemoV2/WordAddInDemoV2.csproj
@@ -158,13 +158,27 @@
     can be found.
   -->
   <ItemGroup>
-    <Compile Include="ConstantControlSize.cs" />
-    <Compile Include="ConstantNameData.cs" />
-    <Compile Include="GuidGenerator.cs" />
+    <Compile Include="Bookmark\BookmarksForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Bookmark\BookmarksForm.Designer.cs">
+      <DependentUpon>BookmarksForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Bookmark\BookmarksView.xaml.cs">
+      <DependentUpon>BookmarksView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ConstantDatas\ConstantControlSize.cs" />
+    <Compile Include="ConstantDatas\ConstantNameData.cs" />
+    <Compile Include="DataContainers\BookmarksConatiner.cs" />
+    <Compile Include="DataContainers\ControlsContainer.cs" />
+    <Compile Include="Helpers\GuidGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="WinformControlType.cs" />
+    <Compile Include="Ribbons\WinformControlType.cs" />
+    <EmbeddedResource Include="Bookmark\BookmarksForm.resx">
+      <DependentUpon>BookmarksForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -185,7 +199,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="RibbonTab.cs" />
+    <Compile Include="Ribbons\RibbonTab.cs" />
     <Compile Include="TaskPane\DocumentStructureView.xaml.cs">
       <DependentUpon>DocumentStructureView.xaml</DependentUpon>
     </Compile>
@@ -208,14 +222,19 @@
     <None Include="WordAddInDemoV2_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="RibbonTab.xml" />
+    <EmbeddedResource Include="Ribbons\RibbonTab.xml" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Bookmark\BookmarksView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="TaskPane\DocumentStructureView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
