--- a/WordAddInDemoV2/WordAddInDemoV2.csproj
+++ b/WordAddInDemoV2/WordAddInDemoV2.csproj
@@ -171,6 +171,8 @@
     <Compile Include="ConstantDatas\ConstantNameData.cs" />
     <Compile Include="DataContainers\BookmarksConatiner.cs" />
     <Compile Include="DataContainers\ControlsContainer.cs" />
+    <Compile Include="Helpers\ApplicationHelper.cs" />
+    <Compile Include="Helpers\FormHelper.cs" />
     <Compile Include="Helpers\GuidGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -199,7 +201,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Ribbons\RibbonTab.cs" />
+    <Compile Include="Ribbons\MyRibbonTab.cs" />
     <Compile Include="TaskPane\DocumentStructureView.xaml.cs">
       <DependentUpon>DocumentStructureView.xaml</DependentUpon>
     </Compile>
@@ -222,7 +224,7 @@
     <None Include="WordAddInDemoV2_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Ribbons\RibbonTab.xml" />
+    <EmbeddedResource Include="Ribbons\MyRibbonTab.xml" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="Bookmark\BookmarksView.xaml">
